# ATV-PaperBoard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SPEC-addendum-2026-05-16-copilot-cli.md  SPEC-review-2026-05-14.md  SPEC.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  pypi-publish.yml  sync-bridge-version.yml  validate-plugins.yml
.omc/research/: research-20260516-copilot-cli-plugins.md
.omc/research/research-20260514-spec-v4-deep/: report.md  state.json
.omc/research/research-20260514-spec-v4-deep/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md
_release-proof/: copilot-cli-e2e-hook-payload.json  copilot-cli-e2e-hook-response.json  copilot-cli-e2e-input.json  copilot-cli-e2e-input.md  copilot-cli-e2e-transcript.html  copilot-cli-sandbox-build-status.md  copilot-cli-sandbox-copilot-stdout.txt  copilot-cli-sandbox-hook-stdin.jsonl  copilot-cli-sandbox-hook-stdout.jsonl  copilot-cli-sandbox-summary.json
_release-proof/render/: atv-paperboard-v0-2-0-render-pipeline-report.html  atv-paperboard-v0-2-0-render-pipeline-report.meta.yaml  copilot-cli-adapter-status-dashboard.html  copilot-cli-adapter-status-dashboard.meta.yaml  gallery.html
adapters/claude-code/: INSTALL.md  build.py
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/_dist/: INSTALL.md  NOTICE.md  pyproject.toml
adapters/claude-code/_dist/.claude-plugin/: plugin.json
adapters/claude-code/_dist/agents/: artifact-reviewer.md
adapters/claude-code/_dist/core/: bridge.py  cli.py  detect.py  gallery.py  persist.py  regenerate.py  render.py  section_schema.py  validate.py
adapters/claude-code/_dist/core/designs/: glass.DESIGN.md  paperboard.DESIGN.md
adapters/claude-code/_dist/core/designs/starters/: lin-ear-inspired.DESIGN.md  vercel-inspired.DESIGN.md
adapters/claude-code/_dist/core/styles/meridian/: style.yaml
adapters/claude-code/_dist/core/templates/: atv-tier.html.j2  gallery.html.j2
adapters/claude-code/_dist/hooks/: hooks.json
adapters/claude-code/_dist/skills/render-artifact/: SKILL.md
adapters/claude-code/_dist/skills/validate-artifact/: SKILL.md
adapters/claude-code/hooks/: hooks.json
adapters/codex/: AGENTS.md.template  INSTALL.md
adapters/codex/agents/: openai.yaml
adapters/codex/hooks/: config.toml.snippet
adapters/copilot-cli/: INSTALL.md  build.py  plugin.json
adapters/copilot-cli/_dist/: INSTALL.md  hooks.json  plugin.json  pyproject.toml
adapters/copilot-cli/_dist/core/: cli.py  persist.py  regenerate.py  render.py
adapters/copilot-cli/_dist/core/designs/: DESIGN-AUTHORITY.md  meridian.DESIGN.md
adapters/copilot-cli/_dist/core/hooks/: copilot_post_tool_use.py
adapters/copilot-cli/_dist/core/templates/: atv-tier.html.j2  daisy-tier.html.j2  gallery.html.j2
adapters/copilot-cli/_dist/skills/regenerate-artifact/: SKILL.md
adapters/copilot-cli/agents/: artifact-reviewer.agent.md
agents/: artifact-reviewer.md
core/: bridge.py  cli.py  detect.py  gallery.py  persist.py  regenerate.py  render.py  section_schema.py  style_registry.py  validate.py
core/designs/: atv.DESIGN.md
core/designs/starters/: stripi-inspired.DESIGN.md
core/hooks/: __init__.py  copilot_post_tool_use.py
core/styles/paperboard/: style.yaml
core/templates/: atv-tier.html.j2  pico-tier.html.j2
examples/inputs/: atv-showcase.json  bug-hunt.json  build-status.json  harness-comparison.json
examples/output/: atv-paperboard-v0-1-0-preview-build-status.html  atv-paperboard-v0-1-0-preview-build-status.meta.yaml  atv-paperboard-v0-2-0-render-pipeline-report.html  atv-paperboard-v0-2-0-render-pipeline-report.meta.yaml  bug-hunt-9b6f6c.html  bug-hunt-9b6f6c.meta.yaml  bug-hunt.html  bug-hunt.meta.yaml  build-status-8a05f2.html  build-status-8a05f2.meta.yaml  build-status.html  build-status.meta.yaml  gallery.html  harness-comparison-9b31f7.DESIGN.md  harness-comparison-9b31f7.html  harness-comparison-9b31f7.meta.yaml  harness-comparison-claude-code-vs-codex-cli-vs-opencode-vs-copilot.html  harness-comparison-claude-code-vs-codex-cli-vs-opencode-vs-copilot.meta.yaml  harness-comparison.DESIGN.md  harness-comparison.html  harness-comparison.meta.yaml  phase-7a-bug-hunt-real-world-test-pass.html  phase-7a-bug-hunt-real-world-test-pass.meta.yaml
recipes/github-actions/: INSTALL.md  copilot-instructions.md.template  workflow.yml.template
scripts/: lint-artifacts.ps1  lint-artifacts.sh
skills/gallery/: SKILL.md
skills/paperboard/: SKILL.md
skills/regenerate-artifact/: SKILL.md
skills/render-artifact/: SKILL.md
templates/: daisy-tier.html.j2  pico-tier.html.j2
tests/: test_adapter_claude_code.py  test_adapter_codex.py  test_adapter_copilot_cli.py  test_agent_first_skill_ux.py  test_cli_output_dir.py  test_cli_schema.py  test_cli_styles.py  test_core_bridge.py  test_core_gallery.py  test_core_regenerate.py  test_core_render.py  test_core_validate.py  test_design_swap.py  test_impeccable_integration.py  test_md_converter.py  test_recipe_github_actions.py  test_render_fidelity.py  test_render_real_world.py  test_render_visual_fidelity.py  test_starter_attribution.py
tests/fixtures/: sentinel.DESIGN.md  spec_v0.1.1.json
tests/fixtures/compliant/: minimal.DESIGN.md
tests/phase0/: test_v1_bridge.py  test_v3_v4_v5_v6.py
(+2 files in other folders)
